/**
 * Copyright Soramitsu Co., Ltd. All Rights Reserved.
 * SPDX-License-Identifier: Apache-2.0
 */

syntax = "proto3";

package iroha.protocol;

import "transaction.proto";
import "queries.proto";
import "qry_responses.proto";
import "google/protobuf/empty.proto";

enum TxStatus {
  STATELESS_VALIDATION_FAILED = 0;
  STATELESS_VALIDATION_SUCCESS = 1;
  STATEFUL_VALIDATION_FAILED = 2;
  STATEFUL_VALIDATION_SUCCESS = 3;
  REJECTED = 4;
  COMMITTED = 5;
  MST_EXPIRED = 6;
  NOT_RECEIVED = 7;
  MST_PENDING = 8;
  ENOUGH_SIGNATURES_COLLECTED = 9;
}

message ToriiResponse {
  TxStatus tx_status = 1;
  string tx_hash = 2;
  string err_or_cmd_name = 3;
  uint64 failed_cmd_index = 4;
  uint32 error_code = 5;
}

message TxStatusRequest {
  string tx_hash = 1;
}

message TxList {
  repeated Transaction transactions = 1;
}

service CommandService_v1 {
  rpc Torii (Transaction) returns (google.protobuf.Empty);
  rpc ListTorii (TxList) returns (google.protobuf.Empty);
  rpc Status (TxStatusRequest) returns (ToriiResponse);
  rpc StatusStream(TxStatusRequest) returns (stream ToriiResponse);
}

service QueryService_v1 {
  rpc Find (Query) returns (QueryResponse);
  rpc FetchCommits (BlocksQuery) returns (stream BlockQueryResponse);
}
